Fix quote css window border overflow

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@ body {
     background-color: #1f2937;
     justify-content: space-around;
     align-items: center;
-    width: 100%;
     padding: 16px;
 }
 .header-logo {
@@ -82,6 +81,7 @@ body {
     flex-direction: column;
     align-items: center;
     width: 100%;
+    gap: 48px;
 }
 .cards {
     margin-top: 16px;
@@ -113,14 +113,9 @@ body {
 }
 
 .inspiring-quote {
-    margin-top: 48px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
     background-color: #e5e7eb;
-    padding: 48px;
-    margin: 0;
     width: 100%;
 }
 
@@ -129,6 +124,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 48px;
     width: 700px;
 }
 
@@ -136,6 +132,7 @@ body {
     font-size: 36px;
     font-weight: lighter;
     font-style: italic;
+    
 }
 
 .quote-author {
